k8s/department-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: department-deployment
  labels:
    app: department
spec:
  replicas: 1
  selector:
    matchLabels:
      app: department
  template:
    metadata:
      labels:
        app: department
    spec:
      containers:
        - name: department
          image: phpl/department-service
          ports:
            - containerPort: 8080
