k8s/employee-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: employee-deployment
  labels:
    app: employee
spec:
  replicas: 1
  selector:
    matchLabels:
      app: employee
  template:
    metadata:
      labels:
        app: employee
    spec:
      containers:
        - name: employee
          image: phpl/employee-service
          ports:
            - containerPort: 8080
