k8s/organization-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: organization-deployment
  labels:
    app: organization
spec:
  replicas: 1
  selector:
    matchLabels:
      app: organization
  template:
    metadata:
      labels:
        app: organization
    spec:
      containers:
        - name: organization
          image: phpl/organization-service
          ports:
            - containerPort: 8080
