k8s/department-cluster-ip-service.yml
apiVersion: v1
kind: Service
metadata:
  name: department-cluster-ip-service
  labels:
    app: department
spec:
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: department
