k8s/employee-cluster-ip-service.yml
apiVersion: v1
kind: Service
metadata:
  name: employee-cluster-ip-service
  labels:
    app: employee
spec:
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: employee
