k8s/gateway-cluster-ip-service.yml
apiVersion: v1
kind: Service
metadata:
  name: gateway-cluster-ip-service
  labels:
    app: gateway
spec:
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: gateway
