k8s/organization-cluster-ip-service.yml
apiVersion: v1
kind: Service
metadata:
  name: organization-cluster-ip-service
  labels:
    app: organization
spec:
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: organization
